--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"npx webpack --mode=development --watch"
+    "dev": "concurrently \"webpack --mode=development --watch\" \"cd dist && http-server -c-`\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "concurrently": "^9.1.2",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1"
   },
