--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"webpack --mode=development --watch\" \"cd dist && http-server -c-`\""
+    "dev": "concurrently \"webpack --mode=development --watch\" \"cd dist && http-server -c-`\"",
+    "prod":"webpack --mode=production"
   },
   "keywords": [],
   "author": "",
